--- a/src/assets/style/theme/violet/setting.scss
+++ b/src/assets/style/theme/violet/setting.scss
@@ -20,26 +20,26 @@ $theme-header-item-color: #FFF;
 $theme-header-item-background-color: transparent;
 // 顶栏上的项目在 hover 时
 $theme-header-item-color-hover: #FFF;
-$theme-header-item-background-color-hover: rgba(#FFF, .1);
+$theme-header-item-background-color-hover: linear-gradient(-180deg, rgba(255,255,255,0.18) 0%, rgba(255,255,255,0.12) 100%);
 // 顶栏上的项目在 focus 时
 $theme-header-item-color-focus: #FFF;
-$theme-header-item-background-color-focus: rgba(#000, .02);
+$theme-header-item-background-color-focus: linear-gradient(-180deg, rgba(255,255,255,0.18) 0%, rgba(255,255,255,0.12) 100%);
 // 顶栏上的项目在 active 时
 $theme-header-item-color-active: #FFF;
-$theme-header-item-background-color-active: rgba(#000, .1);
+$theme-header-item-background-color-active: linear-gradient(-180deg, rgba(255,255,255,0.18) 0%, rgba(255,255,255,0.12) 100%);
 
 // 侧边栏上的文字颜色
 $theme-aside-item-color: #FFF;
 $theme-aside-item-background-color: transparent;
 // 侧边栏上的项目在 hover 时
 $theme-aside-item-color-hover: #FFF;
-$theme-aside-item-background-color-hover: rgba(#000, .02);
+$theme-aside-item-background-color-hover: linear-gradient(90deg, rgba(255,255,255,0.28) 0%, rgba(255,255,255,0.00) 100%);
 // 侧边栏上的项目在 focus 时
 $theme-aside-item-color-focus: #FFF;
-$theme-aside-item-background-color-focus: rgba(#000, .02);
+$theme-aside-item-background-color-focus: linear-gradient(90deg, rgba(255,255,255,0.28) 0%, rgba(255,255,255,0.00) 100%);
 // 侧边栏上的项目在 active 时
 $theme-aside-item-color-active: #FFF;
-$theme-aside-item-background-color-active: rgba(#000, .1);
+$theme-aside-item-background-color-active: linear-gradient(90deg, rgba(255,255,255,0.28) 0%, rgba(255,255,255,0.00) 100%);
 
 // 侧边栏菜单为空的时候显示的元素
 $theme-aside-menu-empty-icon-color: #FFF;
