--- a/src/assets/style/theme/theme.scss
+++ b/src/assets/style/theme/theme.scss
@@ -100,6 +100,7 @@
           border-right: none;
           .el-menu-item {
             i {
+              margin-left: 4px;
               margin-right: 5px;
               font-size: 16px;
             }
@@ -109,6 +110,7 @@
           @extend %unable-select;
           .el-submenu__title {
             i {
+              margin-left: 4px;
               margin-right: 5px;
               font-size: 16px;
             }
