--- a/src/assets/style/theme/tomorrow-night-blue/setting.scss
+++ b/src/assets/style/theme/tomorrow-night-blue/setting.scss
@@ -9,7 +9,7 @@ $theme-bg-mask: rgba(#000, 0);
 $theme-container-background-color: #FFF;
 $theme-container-header-footer-background-color: #FFF;
 $theme-container-border-inner: 1px solid $color-border-1;
-$theme-container-border-outer: none;
+$theme-container-border-outer: transparent;
 
 // 顶栏和侧边栏中展开的菜单 hover 状态下
 $theme-menu-item-color-hover: #293849;
