--- a/src/assets/style/theme/line/setting.scss
+++ b/src/assets/style/theme/line/setting.scss
@@ -8,8 +8,8 @@ $theme-bg-mask: rgba(#000, 0);
 // container组件
 $theme-container-background-color: rgba(#FFF, .8);
 $theme-container-header-footer-background-color: rgba(#FFF, .6);
-$theme-container-border-inner: 1px solid $color-border-2;
-$theme-container-border-outer: 1px solid $color-border-1;
+$theme-container-border-inner: $color-border-2;
+$theme-container-border-outer: $color-border-1;
 
 // 顶栏和侧边栏中展开的菜单 hover 状态下
 $theme-menu-item-color-hover: #293849;
