--- a/src/assets/style/theme/star/setting.scss
+++ b/src/assets/style/theme/star/setting.scss
@@ -9,7 +9,7 @@ $theme-bg-mask: rgba(#000, .3);
 $theme-container-background-color: rgba(#FFF, .9);
 $theme-container-header-footer-background-color: rgba(#FFF, .6);
 $theme-container-border-inner: 1px solid #cecece;
-$theme-container-border-outer: none;
+$theme-container-border-outer: transparent;
 
 // 顶栏和侧边栏中展开的菜单 hover 状态下
 $theme-menu-item-color-hover: #293849;
