--- a/src/assets/style/theme/tomorrow-night-blue/setting.scss
+++ b/src/assets/style/theme/tomorrow-night-blue/setting.scss
@@ -8,8 +8,8 @@ $theme-bg-mask: rgba(#000, 0);
 // container组件
 $theme-container-background-color: #FFF;
 $theme-container-header-footer-background-color: #FFF;
-$theme-container-border-inner: 1px solid $color-border-1;
-$theme-container-border-outer: transparent;
+$theme-container-border-inner: 1px solid #002253;
+$theme-container-border-outer: 1px solid #002253;
 
 // 顶栏和侧边栏中展开的菜单 hover 状态下
 $theme-menu-item-color-hover: #293849;
