--- a/src/assets/style/theme/star/setting.scss
+++ b/src/assets/style/theme/star/setting.scss
@@ -7,9 +7,10 @@ $theme-bg-mask: rgba(#000, .3);
 
 // container组件
 $theme-container-background-color: rgba(#FFF, .9);
-$theme-container-header-footer-background-color: rgba(#FFF, .6);
+$theme-container-header-footer-background-color: rgba(#FFF, .94);
 $theme-container-border-inner: 1px solid #cecece;
 $theme-container-border-outer: 1px solid #EFF4F8;
+$theme-multiple-page-control-border-color: red;
 
 // 顶栏和侧边栏中展开的菜单 hover 状态下
 $theme-menu-item-color-hover: #293849;
