--- a/src/assets/style/theme/d2/setting.scss
+++ b/src/assets/style/theme/d2/setting.scss
@@ -10,6 +10,7 @@ $theme-container-background-color: rgba(#FFF, 1);
 $theme-container-header-footer-background-color: rgba(#FFF, .6);
 $theme-container-border-inner: 1px solid #cfd7e5;
 $theme-container-border-outer: 1px solid #cfd7e5;
+$theme-multiple-page-control-border-color: red;
 
 // 顶栏和侧边栏中展开的菜单 hover 状态下
 $theme-menu-item-color-hover: #293849;
