--- a/src/assets/style/theme/star/setting.scss
+++ b/src/assets/style/theme/star/setting.scss
@@ -7,10 +7,15 @@ $theme-bg-mask: rgba(#000, .3);
 
 // container组件
 $theme-container-background-color: rgba(#FFF, .9);
-$theme-container-header-footer-background-color: rgba(#FFF, .94);
-$theme-container-border-inner: 1px solid #cecece;
-$theme-container-border-outer: 1px solid #EFF4F8;
-$theme-multiple-page-control-border-color: red;
+$theme-container-header-footer-background-color: #F7FAFC;
+$theme-container-border-inner: 1px solid #114450;
+$theme-container-border-outer: 1px solid #114450;
+$theme-multiple-page-control-color: #FFF;
+$theme-multiple-page-control-color-active: $color-text-normal;
+$theme-multiple-page-control-border-color: #114450;
+$theme-multiple-page-control-border-color-active: #F7FAFC;
+$theme-multiple-page-control-background-color: rgba(#FFF, .5);
+$theme-multiple-page-control-background-color-active: #F7FAFC;
 
 // 顶栏和侧边栏中展开的菜单 hover 状态下
 $theme-menu-item-color-hover: #293849;
