--- a/src/assets/style/theme/tomorrow-night-blue/setting.scss
+++ b/src/assets/style/theme/tomorrow-night-blue/setting.scss
@@ -6,11 +6,16 @@ $theme-bg-color: #002253;
 $theme-bg-mask: rgba(#000, 0);
 
 // container组件
-$theme-container-background-color: #FFF;
-$theme-container-header-footer-background-color: #FFF;
+$theme-container-background-color: rgba(#FFF, 1);
+$theme-container-header-footer-background-color: #F7FAFC;
 $theme-container-border-inner: 1px solid #002253;
 $theme-container-border-outer: 1px solid #002253;
-$theme-multiple-page-control-border-color: red;
+$theme-multiple-page-control-color: #FFF;
+$theme-multiple-page-control-color-active: $color-text-normal;
+$theme-multiple-page-control-border-color: #002253;
+$theme-multiple-page-control-border-color-active: #F7FAFC;
+$theme-multiple-page-control-background-color: rgba(#FFF, .5);
+$theme-multiple-page-control-background-color-active: #F7FAFC;
 
 // 顶栏和侧边栏中展开的菜单 hover 状态下
 $theme-menu-item-color-hover: #293849;
