--- a/src/assets/style/theme/violet/setting.scss
+++ b/src/assets/style/theme/violet/setting.scss
@@ -7,10 +7,15 @@ $theme-bg-mask: rgba(#000, 0);
 
 // container组件
 $theme-container-background-color: #FFF;
-$theme-container-header-footer-background-color: rgba(#FFF, .94);
+$theme-container-header-footer-background-color: #F7FAFC;
 $theme-container-border-inner: 1px solid $color-border-2;
-$theme-container-border-outer: none;
-$theme-multiple-page-control-border-color: red;
+$theme-container-border-outer: 1px solid #8C40E2;
+$theme-multiple-page-control-color: #FFF;
+$theme-multiple-page-control-color-active: $color-text-normal;
+$theme-multiple-page-control-border-color: #8C40E2;
+$theme-multiple-page-control-border-color-active: #F7FAFC;
+$theme-multiple-page-control-background-color: rgba(#FFF, .3);
+$theme-multiple-page-control-background-color-active: #F7FAFC;
 
 // 顶栏和侧边栏中展开的菜单 hover 状态下
 $theme-menu-item-color-hover: #293849;
