--- a/src/assets/style/theme/line/setting.scss
+++ b/src/assets/style/theme/line/setting.scss
@@ -7,15 +7,15 @@ $theme-bg-mask: rgba(#000, 0);
 
 // container组件
 $theme-container-background-color: rgba(#FFF, .8);
-$theme-container-header-footer-background-color: #F7FAFC;
+$theme-container-header-footer-background-color: #FFF;
 $theme-container-border-inner: 1px solid $color-border-2;
 $theme-container-border-outer: 1px solid $color-border-1;
 $theme-multiple-page-control-color: #FFF;
 $theme-multiple-page-control-color-active: $color-text-normal;
 $theme-multiple-page-control-border-color: #cfd7e5;
-$theme-multiple-page-control-border-color-active: #F7FAFC;
+$theme-multiple-page-control-border-color-active: #FFF;
 $theme-multiple-page-control-background-color: #cfd7e5;
-$theme-multiple-page-control-background-color-active: #F7FAFC;
+$theme-multiple-page-control-background-color-active: #FFF;
 
 // 顶栏和侧边栏中展开的菜单 hover 状态下
 $theme-menu-item-color-hover: #293849;
