--- a/src/assets/style/theme/tomorrow-night-blue/setting.scss
+++ b/src/assets/style/theme/tomorrow-night-blue/setting.scss
@@ -8,7 +8,7 @@ $theme-bg-mask: rgba(#000, 0);
 // container组件
 $theme-container-background-color: rgba(#FFF, 1);
 $theme-container-header-footer-background-color: #FFF;
-$theme-container-border-inner: 1px solid #002253;
+$theme-container-border-inner: 1px solid $color-border-1;
 $theme-container-border-outer: 1px solid #002253;
 $theme-multiple-page-control-color: #FFF;
 $theme-multiple-page-control-color-active: $color-text-normal;
