--- a/src/assets/style/theme/d2/setting.scss
+++ b/src/assets/style/theme/d2/setting.scss
@@ -10,8 +10,11 @@ $theme-container-background-color: rgba(#FFF, 1);
 $theme-container-header-footer-background-color: #FFF;
 $theme-container-border-inner: 1px solid #cfd7e5;
 $theme-container-border-outer: 1px solid #cfd7e5;
+
 $theme-multiple-page-control-color: $color-text-normal;
 $theme-multiple-page-control-color-active: #2f74ff;
+$theme-multiple-page-control-nav-prev-color: #cfd7e5;
+$theme-multiple-page-control-nav-next-color: #cfd7e5;
 $theme-multiple-page-control-border-color: #cfd7e5;
 $theme-multiple-page-control-border-color-active: #FFF;
 $theme-multiple-page-control-background-color: #cfd7e5;
