--- a/src/assets/style/theme/line/setting.scss
+++ b/src/assets/style/theme/line/setting.scss
@@ -9,9 +9,12 @@ $theme-bg-mask: rgba(#000, 0);
 $theme-container-background-color: rgba(#FFF, .8);
 $theme-container-header-footer-background-color: #FFF;
 $theme-container-border-inner: 1px solid $color-border-2;
-$theme-container-border-outer: 1px solid $color-border-1;
+$theme-container-border-outer: 1px solid #cfd7e5;
+
 $theme-multiple-page-control-color: #FFF;
 $theme-multiple-page-control-color-active: $color-text-normal;
+$theme-multiple-page-control-nav-prev-color: #cfd7e5;
+$theme-multiple-page-control-nav-next-color: #cfd7e5;
 $theme-multiple-page-control-border-color: #cfd7e5;
 $theme-multiple-page-control-border-color-active: #FFF;
 $theme-multiple-page-control-background-color: #cfd7e5;
