--- a/src/assets/style/theme/tomorrow-night-blue/setting.scss
+++ b/src/assets/style/theme/tomorrow-night-blue/setting.scss
@@ -10,8 +10,11 @@ $theme-container-background-color: rgba(#FFF, 1);
 $theme-container-header-footer-background-color: #FFF;
 $theme-container-border-inner: 1px solid $color-border-1;
 $theme-container-border-outer: 1px solid #002253;
+
 $theme-multiple-page-control-color: #FFF;
 $theme-multiple-page-control-color-active: $color-text-normal;
+$theme-multiple-page-control-nav-prev-color: #FFF;
+$theme-multiple-page-control-nav-next-color: #FFF;
 $theme-multiple-page-control-border-color: #002253;
 $theme-multiple-page-control-border-color-active: #FFF;
 $theme-multiple-page-control-background-color: rgba(#FFF, .2);
