--- a/src/assets/style/theme/theme.scss
+++ b/src/assets/style/theme/theme.scss
@@ -205,7 +205,7 @@
 
   // 背景图片和遮罩
   .layout-main-group {
-    background: $theme-bg-color;
+    background-color: $theme-bg-color;
     .layout-main-mask {
       background: $theme-bg-mask;
     }
