--- a/src/assets/style/theme/register.scss
+++ b/src/assets/style/theme/register.scss
@@ -1,3 +1,6 @@
+@import '~@/assets/style/public.scss';
+@import '~@/assets/style/theme/theme-base.scss';
+
 @import '~@/assets/style/theme/d2/index.scss';
 @import '~@/assets/style/theme/line/index.scss';
 @import '~@/assets/style/theme/star/index.scss';
