--- a/src/assets/style/theme/d2/setting.scss
+++ b/src/assets/style/theme/d2/setting.scss
@@ -17,7 +17,7 @@ $theme-multiple-page-control-nav-prev-color: #cfd7e5;
 $theme-multiple-page-control-nav-next-color: #cfd7e5;
 $theme-multiple-page-control-border-color: #cfd7e5;
 $theme-multiple-page-control-border-color-active: #FFF;
-$theme-multiple-page-control-background-color: #cfd7e5;
+$theme-multiple-page-control-background-color: rgba(#000, .03);
 $theme-multiple-page-control-background-color-active: #FFF;
 
 // 顶栏和侧边栏中展开的菜单 hover 状态下
