--- a/src/assets/style/theme/tomorrow-night-blue/setting.scss
+++ b/src/assets/style/theme/tomorrow-night-blue/setting.scss
@@ -29,26 +29,26 @@ $theme-header-item-color: #FF929A;
 $theme-header-item-background-color: transparent;
 // 顶栏上的项目在 hover 时
 $theme-header-item-color-hover: #FFEBA4;
-$theme-header-item-background-color-hover: #00162D;
+$theme-header-item-background-color-hover: rgba(#FFF, .05);
 // 顶栏上的项目在 focus 时
 $theme-header-item-color-focus: #FFB870;
-$theme-header-item-background-color-focus: #00162D;
+$theme-header-item-background-color-focus: rgba(#FFF, .05);
 // 顶栏上的项目在 active 时
 $theme-header-item-color-active: #FFB870;
-$theme-header-item-background-color-active: #00162D;
+$theme-header-item-background-color-active: rgba(#FFF, .05);
 
 // 侧边栏上的文字颜色
 $theme-aside-item-color: #FF929A;
 $theme-aside-item-background-color: transparent;
 // 侧边栏上的项目在 hover 时
 $theme-aside-item-color-hover: #FFEBA4;
-$theme-aside-item-background-color-hover: #00162D;
+$theme-aside-item-background-color-hover: rgba(#FFF, .05);
 // 侧边栏上的项目在 focus 时
 $theme-aside-item-color-focus: #FFB870;
-$theme-aside-item-background-color-focus: #00162D;
+$theme-aside-item-background-color-focus: rgba(#FFF, .05);
 // 侧边栏上的项目在 active 时
 $theme-aside-item-color-active: #FFB870;
-$theme-aside-item-background-color-active: #00162D;
+$theme-aside-item-background-color-active: rgba(#FFF, .05);
 
 // 侧边栏菜单为空的时候显示的元素
 $theme-aside-menu-empty-icon-color: #FFB870;
