--- a/src/assets/style/theme/violet/index.scss
+++ b/src/assets/style/theme/violet/index.scss
@@ -2,7 +2,7 @@
 @import '../theme.scss';
 
 .theme-#{$theme-name} {
-  .layout-main-group {
+  .d2-layout-main-group {
     background: #bc00e3;
     background: linear-gradient(120deg, #bc00e3 0%, #4EFFFB 100%);
   }
