--- a/src/assets/style/theme/theme-base.scss
+++ b/src/assets/style/theme/theme-base.scss
@@ -162,7 +162,7 @@
         display: flex;
         flex-direction: column;
         // 主体部分分为多页面控制器 和主体
-        .d2-layout-main-header {
+        .d2-theme-container-main-header {
           flex-grow: 0;
           // 多页面控制器
           .d2-multiple-page-control {
@@ -176,7 +176,7 @@
           }
         }
         // 主体
-        .d2-layout-main-body {
+        .d2-theme-container-main-body {
           flex-grow: 1;
           position: relative;
           // 布局组件
