--- a/src/assets/style/theme/theme-base.scss
+++ b/src/assets/style/theme/theme-base.scss
@@ -56,7 +56,7 @@
         }
       }
       // [菜单] 顶栏
-      .el-menu.d2-theme-header-menu {
+      .el-menu {
         float: left;
         border-bottom: none;
         background-color: transparent;
