--- a/src/assets/style/theme/theme.scss
+++ b/src/assets/style/theme/theme.scss
@@ -51,7 +51,7 @@
       }
     }
     // 顶栏菜单
-    .el-menu.d2-theme-header-menu {
+    .el-menu {
       .el-menu-item {
         transition: border-top-color 0s;
         color: $theme-header-item-color;
