--- a/src/assets/style/theme/theme.scss
+++ b/src/assets/style/theme/theme.scss
@@ -208,6 +208,12 @@
               border-left-color: $theme-multiple-page-control-border-color;
               &:first-child {
                 border-left: none;
+                &:hover {
+                  padding: 0px 20px;
+                }
+                .el-icon-close {
+                  display: none;
+                }
               }
             }
             .el-tabs__item.is-active {
