--- a/src/assets/style/theme/theme-base.scss
+++ b/src/assets/style/theme/theme-base.scss
@@ -213,10 +213,16 @@
               border-top-left-radius: 0px;
               border-top-right-radius: 0px;
             }
-            // 隐形布局组件 这个组件不建议在有多页面导航的时候使用 不美观
+            // 隐形布局组件
             .d2-container-ghost {
               margin-right: 20px;
               margin-bottom: 20px;
+              .d2-container-ghost-header {
+                border-top: none;
+                border-top-left-radius: 0px;
+                border-top-right-radius: 0px;
+                margin-bottom: 20px;
+              }
             }
           }
         }
